--- a/src/components/Button/Button.styles.scss
+++ b/src/components/Button/Button.styles.scss
@@ -4,6 +4,8 @@
   color: #ffffff;
   font-size: 14px;
   font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 1;
   text-decoration: none;
   text-transform: uppercase;
   background: #0069d2;
