--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -10,11 +10,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 16px;
 }
 
 .header__row {
   & + & {
-    border-top: 2px solid #d5d6d6;
+    padding: 16px 0;
+
+    @media (min-width: 768px) {
+      padding: 0;
+      border-top: 2px solid #d5d6d6;
+    }
   }
 }
 
@@ -26,12 +32,22 @@
   list-style: none;
 }
 
+.header__utility-nav {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: inline-flex;
+  }
+}
+
 .header__utility-item {
   padding: 16px 40px;
   border-right: 2px solid #d5d6d6;
 
   &:first-child {
-    padding-left: 0;
+    @media (min-width: 1392px) {
+      padding-left: 0;
+    }
   }
 }
 
@@ -47,13 +63,76 @@
 }
 
 .header__nav {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  list-style: none;
+  display: none;
+
+  @media (min-width: 768px) {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    list-style: none;
+  }
 }
 
 .header__nav-item {
   padding: 30px 20px;
+}
+
+.header__auth {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: block;
+  }
+}
+
+.header__nav-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0;
+  height: 12px;
+  width: 24px;
+  background: none;
+  border: 0;
+
+  &:focus {
+    outline: none;
+  }
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.header__nav-button-line {
+  display: inline-block;
+  width: 16px;
+  height: 1px;
+  background: rgba(46, 49, 52, 0.8);
+  opacity: 1;
+  transition: opacity 0.2s, transform 0.2s;
+}
+
+.header__nav-button-line--top {
+  transform-origin: 10%;
+
+  .header__nav-button--is-open & {
+    transform: rotate(45deg);
+  }
+}
+
+.header__nav-button-line--middle {
+  .header__nav-button--is-open & {
+    opacity: 0;
+  }
+}
+
+.header__nav-button-line--bottom {
+  transform-origin: 20%;
+
+  .header__nav-button--is-open & {
+    transform: rotate(-45deg);
+  }
 }
