--- a/src/components/Hero/Hero.styles.scss
+++ b/src/components/Hero/Hero.styles.scss
@@ -21,16 +21,26 @@
 
 .hero__content {
   position: relative;
+  padding: 16px;
   max-width: 984px;
 }
 
 .hero__heading {
-  margin: 0 0 48px;
+  margin: 0 0 24px;
   color: #ffffff;
-  font-size: 72px;
+  font-size: 18px;
   font-weight: 500;
   letter-spacing: 1px;
   text-align: center;
+
+  @media (min-width: 768px) {
+    margin: 0 0 48px;
+    font-size: 48px;
+  }
+
+  @media (min-width: 1024px) {
+    font-size: 72px;
+  }
 }
 
 .hero__action {
