--- a/src/components/Hero/Hero.styles.scss
+++ b/src/components/Hero/Hero.styles.scss
@@ -32,6 +32,8 @@
   font-weight: 500;
   letter-spacing: 1px;
   text-align: center;
+  opacity: 0;
+  transition: opacity 0.5s;
 
   @media (min-width: 768px) {
     margin: 0 0 48px;
@@ -41,6 +43,10 @@
   @media (min-width: 1024px) {
     font-size: 72px;
   }
+}
+
+.hero__heading--is-visible {
+  opacity: 1;
 }
 
 .hero__action {
