--- a/src/components/EquipmentGrid/EquipmentGrid.styles.scss
+++ b/src/components/EquipmentGrid/EquipmentGrid.styles.scss
@@ -17,10 +17,21 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  opacity: 0;
+  transform: translateY(20vh);
+  visibility: hidden;
+  transition: opacity 0.2s, transform 0.4s;
+  will-change: opacity, visibility;
 
   @media (min-width: 1392px) {
     margin: 0 -12px;
   }
+}
+
+.equipment-grid__items--is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
 }
 
 .equipment-grid__item {
