Make Header sticky until scrolling past Hero

--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -1,4 +1,11 @@
 .header {
+  top: 0;
+  z-index: 1;
+  background: #ffffff;
+}
+
+.header--is-sticky {
+  position: sticky;
 }
 
 .header__wrapper {
