--- a/src/components/Footer/Footer.styles.scss
+++ b/src/components/Footer/Footer.styles.scss
@@ -70,8 +70,10 @@
 }
 
 .footer__meta {
+  position: relative;
   margin: 0 auto;
   padding: 20px 0;
+  max-width: 1392px;
   letter-spacing: 0.3px;
   text-align: center;
 
@@ -79,6 +81,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+}
+
+.footer__language {
+  margin: 0 0 12px;
+
+  @media (min-width: 768px) {
+    position: absolute;
+    left: 0;
+    margin: 0;
   }
 }
 
