--- a/src/components/MediaSlider/MediaSlider.styles.scss
+++ b/src/components/MediaSlider/MediaSlider.styles.scss
@@ -1,24 +1,71 @@
 .media-slider {
-  display: flex;
-  flex-wrap: nowrap;
+  position: relative;
   margin: 0 0 50px;
   padding: 24px 0;
   background: #f4f5f7;
-  overflow-x: auto;
+  overflow: hidden;
+}
+
+.media-slider__button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  width: 40px;
+  height: 40px;
+  background: rgba(#000c28, 0.8);
+  border: 1px solid rgba(#f4f5f7, 0.32);
+  border-radius: 50%;
+  box-shadow: 0 7px 12px 0 rgba(46, 49, 52, 0.3);
+  opacity: 0.8;
+  cursor: pointer;
+
+  svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 40%;
+    height: 40%;
+    transform: translate(-50%, -50%);
+    fill: #ffffff;
+  }
+}
+
+.media-slider__button--previous {
+  left: 8px;
+
+  @media (min-width: 1024) {
+    left: 16px;
+  }
+}
+
+.media-slider__button--next {
+  right: 8px;
+
+  @media (min-width: 1024) {
+    right: 16px;
+  }
+}
+
+.media-slider__slides {
+  display: flex;
+  flex-wrap: nowrap;
+  transition: transform 0.2s;
 }
 
 .media-slider__slide {
+  box-sizing: border-box;
   display: inline-block;
   padding: 0 12px;
-  width: 80%;
+  width: 100%;
   flex: 0 0 auto;
 
   @media (min-width: 768px) {
-    width: 45%;
+    width: 50%;
   }
 
   @media (min-width: 1024px) {
-    width: 30%;
+    width: 33.33%;
   }
 }
 
