--- a/src/components/Select/Select.styles.scss
+++ b/src/components/Select/Select.styles.scss
@@ -1,8 +1,8 @@
 .select {
-  display: block;
+  display: inline-block;
   margin: 0;
   padding: 0 22px 0 0;
-  width: 100%;
+  max-width: 100%;
   max-width: 100%;
   color: #ffffff;
   font-size: 14px;
