--- a/src/components/EquipmentGrid/EquipmentGrid.styles.scss
+++ b/src/components/EquipmentGrid/EquipmentGrid.styles.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/variables.scss';
+
 .equipment-grid {
   margin: 0 auto 50px;
   max-width: 1392px;
@@ -23,7 +25,7 @@
   transition: opacity 0.2s, transform 0.4s;
   will-change: opacity, visibility;
 
-  @media (min-width: 1392px) {
+  @media (min-width: #{$x-wide-breakpoint}) {
     margin: 0 -12px;
   }
 }
@@ -42,7 +44,7 @@
   text-align: center;
   text-decoration: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: #{$medium-breakpoint}) {
     padding: 0 12px;
     width: 25%;
   }
@@ -58,7 +60,7 @@
   max-width: 100%;
   max-height: 171px;
 
-  @media (min-width: 1024px) {
+  @media (min-width: #{$wide-breakpoint}) {
     max-height: 228px;
   }
 }
@@ -72,7 +74,7 @@
   text-decoration: none;
   opacity: 0.8;
 
-  @media (min-width: 768px) {
+  @media (min-width: #{$medium-breakpoint}) {
     font-size: 24px;
   }
 }
