--- a/src/components/Hero/Hero.styles.scss
+++ b/src/components/Hero/Hero.styles.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/variables.scss';
+
 .hero {
   position: relative;
   display: flex;
@@ -35,12 +37,12 @@
   opacity: 0;
   transition: opacity 0.5s;
 
-  @media (min-width: 768px) {
+  @media (min-width: #{$medium-breakpoint}) {
     margin: 0 0 48px;
     font-size: 48px;
   }
 
-  @media (min-width: 1024px) {
+  @media (min-width: #{$wide-breakpoint}) {
     font-size: 72px;
   }
 }
