--- a/src/components/LibraryGrid/LibraryGrid.styles.scss
+++ b/src/components/LibraryGrid/LibraryGrid.styles.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/variables.scss';
+
 .library-grid {
   display: flex;
   flex-wrap: wrap;
@@ -11,11 +13,11 @@
   width: 100%;
   text-decoration: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: #{$medium-breakpoint}) {
     width: 50%;
   }
 
-  @media (min-width: 1024px) {
+  @media (min-width: #{$wide-breakpoint}) {
     width: 25%;
   }
 }
